fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow-x: hidden;
 }
 
 .calendar {
